// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object {...} parses default assignment prop: {foo=123} 1`] = `
object (1:0-1:9)
  prop (1:1-1:8)
    ident (1:1-1:4) foo
    assign = (1:1-1:8)
      ident (1:1-1:4) foo
      number (1:5-1:8) 123
`;

exports[`object {...} parses empty: {} 1`] = `
object (1:0-1:2)

`;

exports[`object {...} parses multiple shorthand exprs: {foo, bar} 1`] = `
object (1:0-1:10)
  prop (1:1-1:4)
    ident (1:1-1:4) foo
    ident (1:1-1:4) foo
  prop (1:6-1:9)
    ident (1:6-1:9) bar
    ident (1:6-1:9) bar
`;

exports[`object {...} parses single prop: {foo: spam} 1`] = `
object (1:0-1:11)
  prop (1:1-1:10)
    ident (1:1-1:4) foo
    block (1:4-1:10)
      ident (1:6-1:10) spam
`;

exports[`object {...} parses single shorthand prop: {foo} 1`] = `
object (1:0-1:5)
  prop (1:1-1:4)
    ident (1:1-1:4) foo
    ident (1:1-1:4) foo
`;

exports[`object {...} parses single str prop: {\`foo\`: spam} 1`] = `
object (1:0-1:13)
  prop (1:1-1:12)
    string \` (1:1-1:6)
      \`foo\`
    block (1:6-1:12)
      ident (1:8-1:12) spam
`;
